﻿<h3>Version 1.1.2</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
	<li>Implemented #45: Employee entity: Added Disciplines field and corresponding UI.</li>
	<li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.1</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
	<li>EmployeeList module: Better employee sorting by adding some weight to the prime positions in the current division (applies to sorting by max. weight only).</li>
	<li>Employee module: Shows edit / details actions only when employee exists, not just defined in module settings.</li>
	<li>Employee entity: OtherName now optional.</li>
	<li>EditEmployee control: Employee name fields now properly validated.</li>
	<li>EditEmployee control: Cancel buttons in position and achievement edit forms always visible now.</li>
	<li>Implemented #10: Employee, Division entities: Added WebSiteLabel field to make website links more readable.</li>
	<li>Implemented #36: Employee module: Ability to display employee info by userid querystring param on the profile page.</li>
	<li>Implemented #38: Division entity: Added DocumentURL field for the division's main (regulations) document.</li>
	<li>Implemented #44: EditEmployee control: Clear achievement form when editing is done.</li>
	<li>Fixed #42: EditEmployee control: Document URL doesn't always set properly when editing employee achievements.</li>
	<li>Fixed #43: EditEmployee control: Missing currently selected tab on postback.</li>
	<li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.0</h3>
<p>This is the minor release that dedicated mostly to implementing employee achievements / experience features.</p>
<ul>
	<li>Added DB shema, edit and view UI for employee achievements, including common achievement types.</li>
	<li>As a result, AcademicTitle and AcademicDegree fields marked as obsolete, but still can be used.</li>